# Projeto_ia

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
notebooks/: pipeline.ipynb
src/creditcard_ml/api/: app.py
src/creditcard_ml/api/routes/: batch_route.py  mlops_route.py  predict_route.py
src/creditcard_ml/api/schemas/: predict_schema.py
src/creditcard_ml/core/: feature_engineering.py  model_loader.py  predict_batch.py  predict_single.py
src/creditcard_ml/data/: loader.py
src/creditcard_ml/model/: model.pkl  model.pkl.dvc  predict.py  scaler.pkl
src/creditcard_ml/scripts/: download_data.py  evaluate.py  preprocess.py  train.py
src/creditcard_ml/test/: test_features.py  test_predict.py
src/creditcard_ml/training/: train.py
